[metadata]
name = lugo4py
version = 0.0.1-beta.1
author ="Rubens Silva, Lucas Coelho"
description ="Client to connect to Lugo Game Server",
long_description = file: README.md
description-file = README.md
url = https://lugobots.dev/
project_urls=
    Source = https://github.com/CodeSolid/python-package-example-setuptools https://github.com/lugobots/lugo4py

[options]
package_dir=
    =src
packages=find:

[options.packages.find]
where=src
install_requires =
    grpcio
    protobuf
    importlib; python_version >= "3.9"
